--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-numpy~=1.19.5
-numpydoc==0.8.0
-pandas==0.23.0
-scikit-image==0.13.1
-scikit-learn==0.19.1
-scipy==1.1.0
-tensorboard==1.8.0
-tensorflow==1.8.0
-Keras==2.2.0
-Keras-Applications==1.0.2
-Keras-Preprocessing==1.0.1
-seaborn==0.8.1
-opencv-python~=4.5.2.54
-Pillow~=8.2.0
+numpy
+numpydoc
+pandas
+scikit-image
+scikit-learn
+scipy
+tensorboard
+tensorflow
+Keras
+Keras-Applications
+Keras-Preprocessing
+seaborn
+opencv-python
+Pillow
+pyTelegramBotApi
